Optimized cross-platform