@@ -6,15 +6,14 @@ import java.awt.event.ActionListener;
 import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.*;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Locale;
 
 public class FileOrganizer {
     private static final Map<String, String> FILE_TYPES = new HashMap<>();
-    private static final String TRASH_FOLDER = "Trash";
+    private static final String TRASH_FOLDER = getTrashDirectory();
 
     static {
         FILE_TYPES.put(".jpg", "Images");
@@ -69,15 +68,15 @@ public class FileOrganizer {
         JPanel panel = new JPanel();
         panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
         panel.setBackground(Color.DARK_GRAY);
-        panel.setBorder(BorderFactory.createEmptyBorder(60, 30, 30, 30)); // Increased top padding
+        panel.setBorder(BorderFactory.createEmptyBorder(60, 30, 30, 30));
 
         JLabel headerLabel = new JLabel("Choose the Folder to Organize", JLabel.CENTER);
         headerLabel.setFont(new Font("Times New Roman", Font.BOLD, 20));
-        headerLabel.setForeground(Color.BLACK);
-        headerLabel.setAlignmentX(Component.CENTER_ALIGNMENT); // Keep it centered
+        headerLabel.setForeground(Color.WHITE);
+        headerLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
         panel.add(headerLabel);
 
-        panel.add(Box.createRigidArea(new Dimension(0, 30))); // Extra space below text
+        panel.add(Box.createRigidArea(new Dimension(0, 30)));
 
         JPanel buttonPanel = new JPanel(new GridBagLayout());
         buttonPanel.setBackground(Color.DARK_GRAY);
@@ -85,13 +84,15 @@ public class FileOrganizer {
         gbc.gridx = 0;
         gbc.gridy = 0;
         gbc.insets = new Insets(10, 0, 10, 0);
-        
+
         JButton organizeButton = new JButton("Choose Folder");
         organizeButton.setPreferredSize(new Dimension(200, 50));
         organizeButton.setBackground(new Color(0, 123, 255));
-        organizeButton.setForeground(Color.BLACK);
+        organizeButton.setForeground(Color.BLACK); // Ensures text is black
         organizeButton.setFocusPainted(false);
         organizeButton.setFont(new Font("Times New Roman", Font.BOLD, 16));
+        organizeButton.setOpaque(true); // Ensure the background is applied properly
+        organizeButton.setBorderPainted(false); // Optional: Removes border
         buttonPanel.add(organizeButton, gbc);
 
         panel.add(buttonPanel);
@@ -124,7 +125,6 @@ public class FileOrganizer {
         for (String folder : FILE_TYPES.values()) {
             new File(directoryPath + File.separator + folder).mkdirs();
         }
-        new File(directoryPath + File.separator + TRASH_FOLDER).mkdirs();
 
         File[] files = directory.listFiles();
         if (files == null || files.length == 0) {
@@ -142,19 +142,30 @@ public class FileOrganizer {
                 try {
                     Files.move(file.toPath(), Path.of(targetDir.getPath(), fileName), StandardCopyOption.REPLACE_EXISTING);
                 } catch (IOException e) {
-                    moveToTrash(file, directoryPath);
+                    moveToTrash(file);
                 }
             }
         }
         JOptionPane.showMessageDialog(null, "File organization complete.");
     }
 
-    private void moveToTrash(File file, String directoryPath) {
-        File trashDir = new File(directoryPath + File.separator + TRASH_FOLDER);
+    private void moveToTrash(File file) {
         try {
-            Files.move(file.toPath(), Path.of(trashDir.getPath(), file.getName()), StandardCopyOption.REPLACE_EXISTING);
+            Path trashPath = Paths.get(TRASH_FOLDER, file.getName());
+            Files.move(file.toPath(), trashPath, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
             JOptionPane.showMessageDialog(null, "Failed to move to Trash: " + e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
+    private static String getTrashDirectory() {
+        String os = System.getProperty("os.name").toLowerCase(Locale.ROOT);
+        if (os.contains("win")) {
+            return System.getenv("USERPROFILE") + "\\Recycle Bin"; // Windows Recycle Bin (not directly accessible)
+        } else if (os.contains("mac")) {
+            return System.getProperty("user.home") + "/.Trash"; // macOS Trash
+        } else {
+            return System.getProperty("user.home") + "/.local/share/Trash/files"; // Linux Trash
         }
     }
 
@@ -162,3 +173,4 @@ public class FileOrganizer {
         SwingUtilities.invokeLater(FileOrganizer::new);
     }
 }
+
